--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+styles.env.example
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -104,4 +105,5 @@ venv.bak/
 
 .next
 .vercel
-node_modules
+node_modules.env.example
+.env.example
